@@ -25,6 +25,7 @@
 + introduced net.sf.oval.localization.context.OValContextRenderer
 + added configuration XSD as replacement for the DTD 
 * constraints declared without any profiles are associated with the "default" profile automatically
+- fixed bug [ 2023617 ] @ValidateWithMethod in superclasses do not work
 
 2008-04-05 v1.20
 ================
